k8s/base/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app
  labels:
    app.kubernetes.io/name: todo-app
    app.kubernetes.io/instance: todo-app
    app.kubernetes.io/part-of: todo-k8s
    app.kubernetes.io/managed-by: kustomize
