k8s/base/app/todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api
  labels:
    app.kubernetes.io/name: todo-api
    app.kubernetes.io/instance: todo-api
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: todo-k8s
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: todo-api
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
