k8s/base/app/todo-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-db
  labels:
    app.kubernetes.io/name: todo-db
    app.kubernetes.io/instance: todo-db
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: todo-k8s
    app.kubernetes.io/managed-by: kustomize
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: todo-db
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
